@@ -4,6 +4,9 @@
  * Copyright (c) 2022,
  * Technische Universitaet Dresden, Germany
  *
+ * Copyright (c) 2023,
+ * Forschungszentrum Juelich GmbH, Germany
+ *
  * This software may be modified and distributed under the terms of
  * a BSD-style license.  See the COPYING file in the package base
  * directory for details.
@@ -141,6 +144,11 @@ SCOREP_Instrumenter_HipAdapter::getConfigToolFlag( SCOREP_Instrumenter_CmdLine& 
 void
 SCOREP_Instrumenter_HipAdapter::printHelp( void )
 {
+    if ( m_unsupported )
+    {
+        return;
+    }
+
     std::cout << "\
   --hip           Enables HIP instrumentation. Enabled by default, if the\n\
                   hipcc compiler is in use. In this case it also conflicts and\n\
