@@ -4,6 +4,9 @@
  * Copyright (c) 2020,
  * Technische Universitaet Dresden, Germany
  *
+ * Copyright (c) 2023,
+ * Forschungszentrum Juelich GmbH, Germany
+ *
  * This software may be modified and distributed under the terms of
  * a BSD-style license.  See the COPYING file in the package base
  * directory for details.
@@ -49,6 +52,11 @@ SCOREP_Instrumenter_KokkosAdapter::getConfigToolFlag( SCOREP_Instrumenter_CmdLin
 void
 SCOREP_Instrumenter_KokkosAdapter::printHelp( void )
 {
+    if ( m_unsupported )
+    {
+        return;
+    }
+
     std::cout << "  --kokkos        Enables Kokkos instrumentation.\n"
               << "  --nokokkos      Disables Kokkos instrumentation."
               << std::endl;
